# dessert

./: .gitignore  AGENT.md  GRAPH.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: README.md  index.html  package.json  tailwind.config.js
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: browser_bridge.rs  db.rs  lib.rs  models.rs  seeds.rs  tracker.rs
apps/desktop/src-tauri/src/commands/: analytics.rs  mod.rs  rewards.rs  rules.rs  scoring.rs  sessions.rs  tasks.rs  tracker.rs
apps/desktop/src/components/: QuestReflectionModal.tsx
apps/desktop/src/features/analytics/: AnalyticsPage.tsx
apps/desktop/src/features/habits/: HabitsPage.tsx
apps/desktop/src/features/home/: HomePage.tsx  SessionEndOverlay.tsx
apps/desktop/src/features/inventory/: InventoryPage.tsx
apps/desktop/src/features/rewards/: RewardsPage.tsx
apps/desktop/src/features/sessions/: SessionView.tsx
apps/desktop/src/features/settings/: SettingsPage.tsx
apps/desktop/src/features/tasks/: TasksPage.tsx
apps/desktop/src/features/timeline/: TimelinePage.tsx
apps/desktop/src/lib/: api.ts  sounds.ts  types.ts
extensions/arc-tracker/: background.js  content.js  manifest.json
